# zlmediakit

./: .gitignore  README.md  config.ini
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: native-lib.cpp  rtmpPush.cpp  rtmpPush.h  stream_pusher.h
Android/app/src/main/cpp/lib/ffmpeg/include/libavutil/: avstring.h  ffversion.h
Android/app/src/main/java/com/zlmediakit/demo/: CameraActivity.java  H264Encoder.java  MainActivity.java
Android/gradle/wrapper/: gradle-wrapper.properties
api/tests/: h264_media_server.c
build_android/: CMakeCache.txt  Makefile  ZLMVersion.h  cmake_install.cmake
build_android/3rdpart/: Makefile  cmake_install.cmake
build_android/api/: Makefile  cmake_install.cmake
build_android/api/tests/: Makefile  cmake_install.cmake
build_android/ext-codec/: Makefile  cmake_install.cmake
build_android/server/: Makefile  cmake_install.cmake
build_android/src/: Makefile  cmake_install.cmake
build_android/srt/: Makefile  cmake_install.cmake
build_android/tests/: Makefile  cmake_install.cmake
build_mac/: CMakeCache.txt  Makefile  ZLMVersion.h  cmake_install.cmake
build_mac/3rdpart/: Makefile  cmake_install.cmake
build_mac/api/: Makefile  cmake_install.cmake
build_mac/api/tests/: Makefile  cmake_install.cmake
build_mac/ext-codec/: Makefile  cmake_install.cmake
build_mac/server/: Makefile  cmake_install.cmake
build_mac/src/: Makefile  cmake_install.cmake
build_mac/srt/: Makefile  cmake_install.cmake
build_mac/tests/: Makefile  cmake_install.cmake
build_mac/webrtc/: Makefile  cmake_install.cmake
conf/: config.ini
mediaserver/: settings.gradle
mediaserver/app/: build.gradle
mediaserver/app/src/androidTest/java/com/example/zlmediakit/: ExampleInstrumentedTest.java
mediaserver/app/src/main/: AndroidManifest.xml
mediaserver/app/src/main/assets/: zlmediakit.ini
mediaserver/app/src/main/assets/www/webassist/: index.html
mediaserver/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  stream_pusher.h  stream_pusher_jni.cpp
mediaserver/app/src/main/cpp/lib/libffmpeg/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
mediaserver/app/src/main/java/com/example/zlmediakit/: Camera2Activity.java  CameraActivity.java  EventType.java  H264Encoder.java  HttpLongConnectionClient.java  HttpShortConnection.java  MainActivity.java  ZLMediaKit.java  ZLMediaKitClient.java
mediaserver/app/src/main/res/layout/: activity_camera.xml  activity_main.xml
mediaserver/app/src/main/res/values/: strings.xml  themes.xml
mediaserver/app/src/main/res/values-night/: themes.xml
mediaserver/app/src/test/java/com/example/zlmediakit/: ExampleUnitTest.java
mediaserver/gradle/: libs.versions.toml
mediaserver/gradle/wrapper/: gradle-wrapper.properties
mediaserver/mediaserver/: build.gradle
mediaserver/mediaserver/src/androidTest/java/com/example/mediaserver/: ExampleInstrumentedTest.java
src/Rtsp/: RtpReceiver.h
tests/: test_pusher.cpp
www/webrtc/: index.html
